[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/8-Puzzle-Chart.png" type="Texture" id=1]
[ext_resource path="res://Assets/Numbers.png" type="Texture" id=2]
[ext_resource path="res://Assets/Congrates.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Palletes.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Buttons.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Mouse.gd" type="Script" id=6]
[ext_resource path="res://Assets/Background.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 2, 2 )

[sub_resource type="Theme" id=12]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 500, 280 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 500, 0, 500, 280 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 1000, 0, 500, 280 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 1500, 0, 500, 280 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 2000, 0, 500, 280 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 2500, 0, 500, 280 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 3000, 0, 500, 280 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "Congrates",
"speed": 7.0
} ]

[node name="8-Puzzle-Game" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 7 )
centered = false
region_rect = Rect2( 0, 0, 500, 280 )

[node name="A2D_Mouse" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CS2D_Mouse" type="CollisionShape2D" parent="A2D_Mouse"]
position = Vector2( 2, 2 )
shape = SubResource( 9 )

[node name="Control" type="Control" parent="."]
margin_right = 500.0
margin_bottom = 280.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Exit" type="Button" parent="Control"]
margin_left = 371.0
margin_top = 225.0
margin_right = 465.0
margin_bottom = 245.0
rect_pivot_offset = Vector2( 47, 10 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="Control"]
margin_left = 371.0
margin_top = 182.0
margin_right = 465.0
margin_bottom = 219.0
rect_pivot_offset = Vector2( 47, 19 )
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Random" type="Button" parent="Control"]
margin_left = 371.0
margin_top = 38.0
margin_right = 465.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( 47, 32 )
text = "Random"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Step+" type="Button" parent="Control"]
margin_left = 35.0
margin_top = 38.0
margin_right = 129.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( 47, 32 )
disabled = true
text = "Step+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Step-" type="Button" parent="Control"]
margin_left = 35.0
margin_top = 109.0
margin_right = 129.0
margin_bottom = 173.0
rect_pivot_offset = Vector2( 47, 32 )
disabled = true
text = "Step-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Automate" type="Button" parent="Control"]
margin_left = 35.0
margin_top = 182.0
margin_right = 129.0
margin_bottom = 246.0
rect_pivot_offset = Vector2( 47, 32 )
disabled = true
text = "Automate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Path_Finding" type="Button" parent="Control"]
margin_left = 371.0
margin_top = 110.0
margin_right = 465.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( 47, 32 )
theme = SubResource( 12 )
text = "Path Finding"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="8-Puzzle-Chart" type="Sprite" parent="."]
position = Vector2( 250, 142 )
texture = ExtResource( 1 )

[node name="Pallete" type="Node2D" parent="."]
position = Vector2( 146, 38 )

[node name="KB2D_1" type="KinematicBody2D" parent="Pallete"]
collision_mask = 0
script = ExtResource( 4 )

[node name="CS2D_1" type="CollisionShape2D" parent="Pallete/KB2D_1"]
position = Vector2( 32, 32 )
shape = SubResource( 10 )

[node name="1" type="Sprite" parent="Pallete/KB2D_1"]
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )

[node name="SB2D_1" type="StaticBody2D" parent="Pallete/KB2D_1"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pallete/KB2D_1/SB2D_1"]
position = Vector2( 32, 32 )
shape = SubResource( 11 )

[node name="KB2D_2" type="KinematicBody2D" parent="Pallete"]
position = Vector2( 72, 0 )
collision_mask = 0
script = ExtResource( 4 )
x = 1
px = 72

[node name="CS2D_2" type="CollisionShape2D" parent="Pallete/KB2D_2"]
position = Vector2( 32, 32 )
shape = SubResource( 10 )

[node name="2" type="Sprite" parent="Pallete/KB2D_2"]
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 64, 0, 64, 64 )

[node name="SB2D_2" type="StaticBody2D" parent="Pallete/KB2D_2"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pallete/KB2D_2/SB2D_2"]
position = Vector2( 32, 32 )
shape = SubResource( 11 )

[node name="KB2D_3" type="KinematicBody2D" parent="Pallete"]
position = Vector2( 144, 0 )
collision_mask = 0
script = ExtResource( 4 )
x = 2
px = 144

[node name="CS2D_3" type="CollisionShape2D" parent="Pallete/KB2D_3"]
position = Vector2( 32, 32 )
shape = SubResource( 10 )

[node name="3" type="Sprite" parent="Pallete/KB2D_3"]
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 128, 0, 64, 64 )

[node name="SB2D_3" type="StaticBody2D" parent="Pallete/KB2D_3"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pallete/KB2D_3/SB2D_3"]
position = Vector2( 32, 32 )
shape = SubResource( 11 )

[node name="KB2D_4" type="KinematicBody2D" parent="Pallete"]
position = Vector2( 144, 72 )
collision_mask = 0
script = ExtResource( 4 )
x = 2
y = 1
px = 144
py = 72

[node name="CS2D_4" type="CollisionShape2D" parent="Pallete/KB2D_4"]
position = Vector2( 32, 32 )
shape = SubResource( 10 )

[node name="4" type="Sprite" parent="Pallete/KB2D_4"]
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 192, 0, 64, 64 )

[node name="SB2D_4" type="StaticBody2D" parent="Pallete/KB2D_4"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pallete/KB2D_4/SB2D_4"]
position = Vector2( 32, 32 )
shape = SubResource( 11 )

[node name="KB2D_5" type="KinematicBody2D" parent="Pallete"]
position = Vector2( 144, 144 )
collision_mask = 0
script = ExtResource( 4 )
x = 2
y = 2
px = 144
py = 144

[node name="CS2D_5" type="CollisionShape2D" parent="Pallete/KB2D_5"]
position = Vector2( 32, 32 )
shape = SubResource( 10 )

[node name="5" type="Sprite" parent="Pallete/KB2D_5"]
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 256, 0, 64, 64 )

[node name="SB2D_5" type="StaticBody2D" parent="Pallete/KB2D_5"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pallete/KB2D_5/SB2D_5"]
position = Vector2( 32, 32 )
shape = SubResource( 11 )

[node name="KB2D_6" type="KinematicBody2D" parent="Pallete"]
position = Vector2( 72, 144 )
collision_mask = 0
script = ExtResource( 4 )
x = 1
y = 2
px = 72
py = 144

[node name="CS2D_6" type="CollisionShape2D" parent="Pallete/KB2D_6"]
position = Vector2( 32, 32 )
shape = SubResource( 10 )

[node name="6" type="Sprite" parent="Pallete/KB2D_6"]
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 320, 0, 64, 64 )

[node name="SB2D_6" type="StaticBody2D" parent="Pallete/KB2D_6"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pallete/KB2D_6/SB2D_6"]
position = Vector2( 32, 32 )
shape = SubResource( 11 )

[node name="KB2D_7" type="KinematicBody2D" parent="Pallete"]
position = Vector2( 0, 144 )
collision_mask = 0
script = ExtResource( 4 )
y = 2
py = 144

[node name="CS2D_7" type="CollisionShape2D" parent="Pallete/KB2D_7"]
position = Vector2( 32, 32 )
shape = SubResource( 10 )

[node name="7" type="Sprite" parent="Pallete/KB2D_7"]
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 384, 0, 64, 64 )

[node name="SB2D_7" type="StaticBody2D" parent="Pallete/KB2D_7"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pallete/KB2D_7/SB2D_7"]
position = Vector2( 32, 32 )
shape = SubResource( 11 )

[node name="KB2D_8" type="KinematicBody2D" parent="Pallete"]
position = Vector2( 0, 72 )
collision_mask = 2147483648
script = ExtResource( 4 )
y = 1
py = 72

[node name="CS2D_8" type="CollisionShape2D" parent="Pallete/KB2D_8"]
position = Vector2( 32, 32 )
shape = SubResource( 10 )

[node name="8" type="Sprite" parent="Pallete/KB2D_8"]
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 448, 0, 64, 64 )

[node name="SB2D_8" type="StaticBody2D" parent="Pallete/KB2D_8"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pallete/KB2D_8/SB2D_8"]
position = Vector2( 32, 32 )
shape = SubResource( 11 )

[node name="KB2D_B" type="KinematicBody2D" parent="Pallete"]
position = Vector2( 72, 72 )
collision_mask = 0
script = ExtResource( 4 )
x = 1
y = 1
px = 72
py = 72

[node name="CS2D_B" type="CollisionShape2D" parent="Pallete/KB2D_B"]
position = Vector2( 32, 32 )
shape = SubResource( 10 )

[node name="B" type="Sprite" parent="Pallete/KB2D_B"]
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 512, 0, 64, 64 )

[node name="SB2D_B" type="StaticBody2D" parent="Pallete/KB2D_B"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pallete/KB2D_B/SB2D_B"]
position = Vector2( 32, 32 )
shape = SubResource( 11 )

[node name="Congrates" type="AnimatedSprite" parent="."]
frames = SubResource( 20 )
animation = "Congrates"
frame = 6
playing = true
centered = false

[node name="Auto_Timer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="change_templates_of_class" from="." to="Control" method="_on_8_Puzzle_Game_change_templates_of_class"]
[connection signal="body_entered" from="A2D_Mouse" to="." method="_on_A2D_Mouse_body_entered"]
[connection signal="body_exited" from="A2D_Mouse" to="." method="_on_A2D_Mouse_body_exited"]
[connection signal="button_up" from="Control/Exit" to="Control" method="_on_Exit_button_up"]
[connection signal="button_up" from="Control/Reset" to="Control" method="_on_Reset_button_up"]
[connection signal="button_up" from="Control/Random" to="Control" method="_on_Random_button_up"]
[connection signal="button_up" from="Control/Step+" to="Control" method="_on_Step_P_button_up"]
[connection signal="button_up" from="Control/Step-" to="Control" method="_on_Step_M_button_up"]
[connection signal="button_up" from="Control/Automate" to="Control" method="_on_Automate_button_up"]
[connection signal="button_up" from="Control/Path_Finding" to="Control" method="_on_Path_Finding_button_up"]
[connection signal="timeout" from="Auto_Timer" to="Control" method="_on_Auto_Timer_timeout"]
